# kafka-proxy

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml  test.avsc
.cargo/: config.toml
.github/workflows/: build.yml  build_release.yml  container.yml  gh_release.yml  release.yml  verify.yml
completions/: _kafka-proxy
examples/: coap.rs  nng.rs  posixmq.rs  rest.rs
src/: cli.rs  completions.rs  kafka_producer.rs  main.rs  metrics.rs
src/cli/: mod.rs  producer.rs  schema_registry.rs  server.rs
src/kafka/: mod.rs  producer.rs  schema_registry.rs  telemetry_client_context.rs
src/kafka/serde/: array.rs  boolean.rs  bytes.rs  datetime.rs  enum.rs  map.rs  mod.rs  null.rs  number.rs  record.rs  union.rs
src/server/: coap.rs  decoder.rs  file.rs  mod.rs  rest.rs  udp.rs  unix_datagram.rs
src/server/stream/: cleanup.rs  datagram.rs  file.rs  mod.rs  nng.rs  posixmq.rs  socket.rs  udp.rs
