[package]
name = "kafka-proxy"
version = "0.13.0"
edition = "2021"
description = "Service to proxy from various protocols to Kafka"
license = "Apache-2.0"
repository = "https://github.com/mkroli/kafka-proxy"
readme = "README.md"
authors = ["Michael Krolikowski"]

[[bin]]
name = "kafka-proxy-completions"
path = "src/completions.rs"

[package.metadata.cross.build]
env.passthrough = [
    "krb5_cv_attr_constructor_destructor=yes",
    "ac_cv_func_regcomp=yes",
    "ac_cv_printf_positional=yes",
    "ac_cv_gssapi_supports_spnego=yes",
    "CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER=/usr/local/musl/bin/armv7-unknown-linux-musleabihf-gcc",
    "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=/usr/local/musl/bin/aarch64-unknown-linux-musl-gcc",
]
xargo = false

[package.metadata.cross.target.x86_64-unknown-linux-musl]
image = "messense/rust-musl-cross:x86_64-musl"

[package.metadata.cross.target.aarch64-unknown-linux-musl]
image = "messense/rust-musl-cross:aarch64-musl"

[package.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "messense/rust-musl-cross:armv7-musleabihf"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
lazy_static = "1"
anyhow = "1"
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
base64 = "0.21"
uuid = "1"
apache-avro = "0.14"
num-traits = "0.2"
num-bigint = "0.4"
bigdecimal = "0.3"
schema_registry_converter = { version = "3.1", features = ["avro"] }
rdkafka = { version = "0.29", features = ["cmake-build", "libz-static", "ssl-vendored", "gssapi-vendored"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }
tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
hyper = "0.14"
axum = { version = "0.6", features = ["headers", "http1", "http2"] }
coap = { version = "0.12", optional = true }
coap-lite = { version = "0.9", optional = true }
opentelemetry = "0.19"
prometheus = "0.13"
opentelemetry-prometheus = "0.12"
posixmq = { version = "1", optional = true }
nng = { version = "1", optional = true }

[build-dependencies]
openssl-src = { version = "111", features = ["force-engine"] }

[dev-dependencies]
reqwest = "0.11"

[features]
default = ["coap", "posixmq", "nng"]
coap = ["dep:coap", "dep:coap-lite"]
posixmq = ["dep:posixmq"]
nng = ["dep:nng"]
