[package]
name = "kafka-proxy"
version = "0.21.1"
edition = "2024"
description = "Service to proxy from various protocols to Kafka"
license = "Apache-2.0"
repository = "https://github.com/mkroli/kafka-proxy"
readme = "README.md"
authors = ["Michael Krolikowski"]

[[bin]]
name = "kafka-proxy-completions"
path = "src/completions.rs"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
lazy_static = "1"
anyhow = "1"
log = "0.4"
fern = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
base64 = "0.22"
uuid = "1"
apache-avro = "0.21"
num-traits = "0.2"
num-bigint = "0.4"
bigdecimal = "0.4"
schema_registry_converter = { version = "4", features = ["avro"] }
rdkafka = { version = "0.39", features = ["cmake-build", "libz-static", "ssl-vendored", "static-linking"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }
tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
hyper = { version = "1", default-features = false, features = ["server", "http1", "http2"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2"] }
axum-extra = { version = "0.12", default-features = false, features = ["typed-header"] }
coap = { version = "0.27", optional = true }
prometheus-client = "0.25"
posixmq = { version = "1", optional = true }
nng = { version = "1", optional = true }

[build-dependencies]
openssl-src = { version = "400", features = ["force-engine"] }

[dev-dependencies]
reqwest = "0.13"

[features]
default = ["coap", "posixmq", "nng"]
coap = ["dep:coap"]
posixmq = ["dep:posixmq"]
nng = ["dep:nng"]
